--- a/front/package.json
+++ b/front/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "~12.1.2",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
+    "angular-star-rating": "^6.0.0",
     "bootstrap": "^4.5.0",
+    "ng-starrating": "^1.0.20",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.2",
     "tslib": "^2.2.0",
