--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build /back/src/jukebox.backend/Dockerfile --file Dockerfile --tag api:$(date +%s)
+      run: docker build --file ./back/src/jukebox.backend/Dockerfile --tag API:$(date +%s)
