--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -13,6 +13,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build --file ./back/src/jukebox.backend/Dockerfile --tag API:$(date +%s)
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      
+    - name: Build and push register app
+      uses: docker/build-push-action@v3
+      with:
+       push: true
+       file: ./back/src/jukebox.backend/Dockerfile
+       tags: ${{ secrets.DOCKERHUB_USERNAME }}/api.jukebox:latest
