--- a/back/src/jukebox.backend/Dockerfile
+++ b/back/src/jukebox.backend/Dockerfile
@@ -1,15 +1,25 @@
-FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build-env
+FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine AS base
+WORKDIR /app
+RUN apk add --no-cache icu-libs icu-data-full
+EXPOSE 5000
+ENV ASPNETCORE_URLS=http://+:5000
+ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false
+# Timer Zone
+ENV TZ=America/Sao_Paulo
+
+FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine AS build
 WORKDIR /src
 
-COPY ["jukebox.backend.csproj", "src/api/"]
+COPY ["jukebox.backend.csproj", "src/jukebox.backend.api/"]
 
-RUN dotnet restore "src/jukebox.backend.csproj"
+
+RUN dotnet restore "src/jukebox.backend.api/jukebox.backend.csproj"
 COPY . .
-WORKDIR "/src/src/api"
-RUN dotnet build "jukebox.backend.csproj" -c Release -o /app/build
+WORKDIR "/src/src/jukebox.backend.api"
+RUN dotnet build "jukebox.backend.api.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "jukebox.backend.csproj" -c Release -o /app/publish
+RUN dotnet publish "jukebox.backend.api.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
