--- a/back/src/jukebox.backend/Dockerfile
+++ b/back/src/jukebox.backend/Dockerfile
@@ -1,27 +1,18 @@
-FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine AS base
+FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build-env
 WORKDIR /app
-RUN apk add --no-cache icu-libs icu-data-full
-EXPOSE 5000
-ENV ASPNETCORE_URLS=http://+:5000
-ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false
+
+RUN dotnet restore "jukebox.backend.csproj"
+
+# Build da aplicacao
+COPY . ./
+RUN dotnet publish -c Release -o out
+
+# Build da imagem
+FROM mcr.microsoft.com/dotnet/aspnet:5.0
+
 # Timer Zone
 ENV TZ=America/Sao_Paulo
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine AS build
-WORKDIR /src
-
-COPY ["jukebox.backend.csproj", "src/api/"]
-
-
-RUN dotnet restore "src/api/jukebox.backend.csproj"
-COPY . .
-WORKDIR "/src/src/api"
-RUN dotnet build "jukebox.backend.api.csproj" -c Release -o /app/build
-
-FROM build AS publish
-RUN dotnet publish "jukebox.backend.api.csproj" -c Release -o /app/publish
-
-FROM base AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=build-env /app/out .
 ENTRYPOINT ["dotnet", "jukebox.backend.dll"]
