--- a/back/src/jukebox.backend/Dockerfile
+++ b/back/src/jukebox.backend/Dockerfile
@@ -1,7 +1,9 @@
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build-env
 WORKDIR /app
 
-RUN dotnet restore "jukebox.backend.csproj"
+COPY *.csproj ./
+
+RUN dotnet restore "./jukebox.backend.csproj"
 
 # Build da aplicacao
 COPY . ./
