--- a/back/src/jukebox.backend/Dockerfile
+++ b/back/src/jukebox.backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build-env
 WORKDIR /app
-RUN apk add --no-cache icu-libs icu-data-full
+RUN apk add --no-cache --upgrade bash
 
 COPY *.csproj ./
 
