--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - name: Login to DockerHub
         uses: docker/login-action@v2
-        with:
+        env:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
           
