--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -1,4 +1,4 @@
-name: API Docker Image CI
+name: API CI
 
 on:
   push:
@@ -15,11 +15,9 @@ jobs:
     steps:
       - name: Login to DockerHub
         uses: docker/login-action@v2
-        env:
+        with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-        run: |
-          echo $secrets.DOCKER_HUB_USERNAME
           
       - name: Build and push
         id: docker_build
