--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -21,5 +21,12 @@ jobs:
           
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-          
+        
+      - name: Build and push  
+        uses: docker/build-push-action@v4  
+        with:
+          context: .
+          push: true
+          file: ./back/src/jukebox.backend/Dockerfile
+          tags: postinico/api.jukebox:latest
       
