--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -24,6 +24,6 @@ jobs:
         with:
           context: .
           push: true
-          file: ./Dockerfile
+          file: Dockerfile
           tags: postinico/api.jukebox:latest
       
