--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -21,8 +21,8 @@ jobs:
         
       - name: Build and push  
         uses: docker/build-push-action@v4  
-        with:
-          push: true
-          file: Dockerfile
-          tags: postinico/api.jukebox:latest
+        run: |
+          cd ./back/src/jukebox.backend/Dockerfile 
+          docker build ... -t postinico/api.jukebox:1.0.0
+      
       
