--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Build and push  
         uses: docker/build-push-action@v4  
         with:
+          context: "{{defaultContext}}"
           push: true
           file: ./jukebox/back/src/jukebox.backend/Dockerfile
           tags: postinico/api.jukebox:latest
