--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -19,7 +19,7 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
         
-      - name: Build and push  
+      - name: Build and push   {{defaultContext}}
         uses: docker/build-push-action@v4  
         with:
           context: "{{defaultContext}}"
