--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -19,10 +19,10 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
         
-      - name: Build and push   ${{ defaultContext }}
+      - name: Build and push
         uses: docker/build-push-action@v4  
         with:
-          context: "{{defaultContext}}"
+          context: .
           push: true
           file: ./jukebox/back/src/jukebox.backend/Dockerfile
           tags: postinico/api.jukebox:latest
