--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4  
         with:
-          file: ./Dockerfile
+          file: Dockerfile
           push: true
           tags: postinico/api.jukebox:latest
       
