--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4  
         with:
+          context: .
           file: Dockerfile
           push: true
           tags: postinico/api.jukebox:latest
