--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -27,16 +27,10 @@ jobs:
         
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        uses: docker/metadata-action@2
         with:
           images: ${{ secrets.DOCKER_HUB_USERNAME }}/api.jukebox
           
-      - name: Build and push
-        uses: docker/build-push-action@v2  
-        with:
-          context: .
-          file: Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/api.jukebox:latest
+      
       
       
