--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
         
       - name: Login DockerHub
-        uses: docker/login-action@v2
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
           username: postinico
           password: dckr_pat_Il1YC4AGImhgFxoHqu4NDTWhGLw
@@ -32,7 +32,7 @@ jobs:
           images: postinico/api.jukebox
           
       - name: Build and push
-        uses: docker/build-push-action@v2  
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc 
         with:
           context: .
           file: Dockerfile
